[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MoAlkhateeb <mo.hany.alkhateeb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
